--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "My Chrome Extension",
-    "description": "The description of the application"
+    "message": "Bugzilla-Board",
+    "description": "https://github.com/bendl/bugzilla-board"
   }
 }
