--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
   "appName": {
-    "message": "bgz board",
-    "description": "The name of the application"
+    "message": "Bugzilla-Board",
+    "description": "https://github.com/bendl/bugzilla-board"
   },
   "appDescription": {
     "message": "Bugzilla-Board",
